# tinvit

./: .gitignore  LICENSE  README.md  render.yaml
api/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
api/src/news_engine/: database.py  settings.py
api/src/news_engine/api/: main.py
api/src/news_engine/api/routers/: articles.py  categories.py  crawl.py  home.py  sources.py
api/src/news_engine/config/sites/: dantri.yaml  tuoitre.yaml  vnexpress.yaml
api/src/news_engine/crawlers/: __init__.py  base.py  dantri.py  tuoitre.py  vnexpress.py
api/src/news_engine/models/: __init__.py  article.py  category.py  source.py  tag.py
api/src/news_engine/parsers/: __init__.py  base.py
api/src/news_engine/repositories/: __init__.py  article_repo.py
api/src/news_engine/services/: __init__.py  article_service.py  crawler_service.py
api/src/news_engine/utils/: slug.py
api/tests/: test_models.py  test_parsers.py  test_settings.py  test_slug.py
web/: .env.example  .gitignore  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
web/src/app/: error.tsx  layout.tsx  loading.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
web/src/app/category/: page.tsx
web/src/app/contact/: page.tsx
web/src/app/search/: page.tsx
web/src/components/article/: ArticleBody.tsx  ArticleCard.tsx  ArticleList.tsx  ArticleMeta.tsx  (+5 more)
web/src/fetchers/: article.ts  category.ts  home.ts  search.ts
web/src/lib/: api.ts  constants.ts  fonts.ts  types.ts  utils.ts
web/src/styles/: globals.css
(+35 files in other folders)
