[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tinvit-api"
version = "0.1.0"
description = "TinVit — Vietnamese news aggregation engine"
authors = [{ name = "TinVit Team" }]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "lxml>=5.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "apscheduler>=3.10.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "ruff>=0.3.0"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
